// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YooMoney desktop className 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcYooMoney YpcYooMoney_view_horizontal Test"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_yoo-money YpcIcon_width_xl YpcIcon_height_s YpcYooMoney-Icon YpcYooMoney-Icon_view_horizontal"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      ЮMoney
    </h4>
  </div>
</article>
`;

exports[`YooMoney desktop view horizontal 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcYooMoney YpcYooMoney_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_yoo-money YpcIcon_width_xl YpcIcon_height_s YpcYooMoney-Icon YpcYooMoney-Icon_view_horizontal"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      ЮMoney
    </h4>
  </div>
</article>
`;

exports[`YooMoney desktop view vertical 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_vertical YpcYooMoney YpcYooMoney_view_vertical"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_yoo-money YpcIcon_width_xl YpcIcon_height_s YpcYooMoney-Icon YpcYooMoney-Icon_view_vertical"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      ЮMoney
    </h4>
  </div>
</article>
`;

exports[`YooMoney touch-phone className 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcYooMoney YpcYooMoney_view_horizontal Test"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_yoo-money YpcIcon_width_xl YpcIcon_height_s YpcYooMoney-Icon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      ЮMoney
    </h4>
  </div>
</article>
`;

exports[`YooMoney touch-phone view horizontal 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcYooMoney YpcYooMoney_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_yoo-money YpcIcon_width_xl YpcIcon_height_s YpcYooMoney-Icon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      ЮMoney
    </h4>
  </div>
</article>
`;

exports[`YooMoney touch-phone view vertical 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcYooMoney YpcYooMoney_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_yoo-money YpcIcon_width_xl YpcIcon_height_s YpcYooMoney-Icon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      ЮMoney
    </h4>
  </div>
</article>
`;
